# lib86

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake.yml  run.yml
assembler/: CMakeLists.txt  assembler.hpp  insnode.hpp  lablenode.hpp  main.cpp  node.hpp
emulator/: CMakeLists.txt  emulator.cpp  main.cpp
lib86/: CMakeLists.txt  cpu.cpp  cpu.hpp  disasembler.hpp  disassembler.cpp  disassembler.hpp  flags.hpp  instruction.cpp  instruction.hpp  interpreter.cpp  interpreter.hpp  interrupt.cpp  interrupt.hpp  registers.hpp  types.hpp
tests/: test.com
